--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Visualisation with D3</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="chartHandler.js" type="module"></script>
+    <script src="barChart.js" type="module"></script>
   </head>
   <body>
     <div id="container">
