--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>Data Visualisation with D3</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="barChart.js" type="module"></script>
+    <script src="heatMap.js" type="module"></script>
+    <script src="heatMapLegend.js" type="module"></script>
   </head>
   <body>
     <div id="container">
       <section id="bar-chart">
         <h1 id="title">United States GDP</h1>
+      </section>
+      <section id="scatterplot">
+        <h1 id="title">Monthly Global Land-Surface Temperature</h1>
+        <h3 id="subtitle">1753–2015: base temperature 8.66℃</h3>
       </section>
     </div>
   </body>
