--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     <script src="barChart.js" type="module"></script>
     <script src="heatMap.js" type="module"></script>
     <script src="heatMapLegend.js" type="module"></script>
+    <script src="scatterplot.js" type="module"></script>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <section id="bar-chart">
-        <h1 id="title">United States GDP</h1>
+        <h1 class="title">United States GDP</h1>
       </section>
+    </div>
+    <div class="container">
+      <section id="heat-map">
+        <h1 class="title">Monthly Global Land-Surface Temperature</h1>
+        <h3 class="subtitle">1753–2015: base temperature 8.66℃</h3>
+      </section>
+    </div>
+    <div class="container">
       <section id="scatterplot">
-        <h1 id="title">Monthly Global Land-Surface Temperature</h1>
-        <h3 id="subtitle">1753–2015: base temperature 8.66℃</h3>
+        <h1 class="title">Doping in Professional Bicycle Racing</h1>
+        <h3 class="subtitle">35 fastest times up Alpe d'Huez</h3>
       </section>
     </div>
   </body>
