--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h1 class="title">Monthly Global Land-Surface Temperature</h1>
         <h3 class="subtitle">1753–2015: base temperature 8.66℃</h3>
       </section>
+      <section id="heat-map-legend"></section>
     </div>
     <div class="container">
       <section id="scatterplot">
