--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Visualisation with D3</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="barChart.js" type="module"></script>
-    <script src="heatMap.js" type="module"></script>
-    <script src="heatMapLegend.js" type="module"></script>
-    <script src="scatterplot.js" type="module"></script>
+    <script src="./chart handlers/barChart.js" type="module"></script>
+    <script src="./chart handlers/heatMap.js" type="module"></script>
+    <script src="./chart handlers/heatMapLegend.js" type="module"></script>
+    <script src="./chart handlers/scatterplot.js" type="module"></script>
   </head>
   <body>
     <div class="container">
