--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <section id="heat-map">
         <h1 class="title">Monthly Global Land-Surface Temperature</h1>
-        <h3 class="subtitle">1753–2015: base temperature 8.66℃</h3>
+        <h3 class="subtitle">1753–2015: base temperature 8.66&deg;C</h3>
       </section>
       <section id="heat-map-legend"></section>
     </div>
